<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="projects.personal.raphaelsantos.quizmaster.Collector">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/min_text_box_margin"
                >
                <TextView
                    android:id="@+id/categoryLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_category"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:spinnerMode="dialog"
                    android:entries="@array/category"
                    android:prompt="@string/question_category"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/questionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_subject"
                android:layout_marginTop="@dimen/activity_vertical_margin"

                />

            <EditText
                android:id="@+id/question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/activity_horizontal_margin"
                android:layout_margin="4dp"
                />

            <TextView
                android:id="@+id/correctLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_correct_answer"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/correct_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/activity_horizontal_margin"
                android:layout_margin="@dimen/min_text_box_margin"
                />
            <TextView
                android:id="@+id/alternative_one_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_correct_answer"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/alternative_one_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/activity_horizontal_margin"
                android:layout_margin="@dimen/min_text_box_margin"
                />

            <TextView
                android:id="@+id/alternative_two_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_alternative_one"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/alternative_two_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/activity_horizontal_margin"
                android:layout_margin="@dimen/min_text_box_margin"
                />

            <TextView
                android:id="@+id/alternative_three_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_alternative_one"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/alternative_three_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/min_text_box_margin"
                android:minHeight="@dimen/activity_horizontal_margin" />
            <TextView
                android:id="@+id/hint_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_hint"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/hint_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/activity_horizontal_margin"
                android:layout_margin="@dimen/min_text_box_margin"
                />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
    </RelativeLayout>
